# adventofcode

./: README.md  build.sbt
2015/: .gitignore  ChangeLog.md  LICENSE  README.md  aoc2015.cabal  package.yaml
2015/src/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs
2015/test/: Day1Test.hs  Day2Test.hs  Day3Test.hs  Day4Test.hs  Day5Test.hs  Day6Test.hs  test.hs
2016/: Makefile  project.clj
2016/dev/: user.clj
2018/: .ghcid  LICENSE  README.md  aoc2018.cabal  default.nix  package.yaml  stack.yaml
2018/data/: day10.in  day13.in  day17.in  day18.in  day19.in  day2.csv  day21.in  day23.in  day5.in
2018/src/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
2018/tests/: Day10Test.hs  Day11Test.hs  Day12Test.hs  Day13Test.hs  Day14Test.hs  Day15Test.hs  Day16Test.hs  Day17Test.hs  Day18Test.hs  Day19Test.hs  Day1Test.hs  Day20Test.hs  Day21Test.hs  Day22Test.hs  Day23Test.hs  Day24Test.hs  Day25Test.hs  Day2Test.hs  Day3Test.hs  Day4Test.hs  Day5Test.hs  Day6Test.hs  Day7Test.hs  Day8Test.hs  Day9Test.hs  test.hs
2019/: Cargo.toml  Makefile  shell.nix
2019/benches/: bench.rs
2019/res/: day01.txt  day02.txt  day08.txt  day16.txt  day21.txt  day22.txt  day25.txt
2019/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  lib.rs  (+5 more)
2020/: Makefile  deps.edn
2021/: README.md  project.clj
2022/: deps.edn
2023/: deps.edn
2024/: deps.edn
(+341 files in other folders)
