name:                aoc2018
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Nazarii Bardiuk
maintainer:          nazarii@bardiuk.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:
    Day1
  build-depends:
      base >=4 && <5
    , containers
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             test.hs
  build-depends:
      aoc2018
    , base >= 4 && < 5
    , tasty
    , tasty-discover
    , tasty-hspec
    , tasty-th

